[project]
name = "squadron"
version = "0.1.0"
description = "Cloud client for multi accounts"
authors = [
    {name = "dutchmo", email = "gregory.matous@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
